--- a/ansible_lesson/index.html
+++ b/ansible_lesson/index.html
@@ -3,7 +3,7 @@
 <title>Ansible Course</title>
 </head>
 <body>
-	<h1>Welcome to Ansible DevOps lesson with Genevieve</h1>
+	<h1>Welcome to Ansible DevOps lesson with Chinenye Genevieve Onyema</h1>
 	<p>Installed and configured a simple Apache web server with ANSIBLE PLAYBOOK ROLES</p>
 </body>
 </html>
